calculation of average tips challenge completed

--- a/2-JS-basics/challenge-5/index.html
+++ b/2-JS-basics/challenge-5/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Compare BMI with methods</h1>
+        <h1>Calculation of average tips</h1>
     </body>
 
     <script src="script.js"></script>
